# TDD

./: LICENSE  README.md  functional_tests.py  pyproject.toml  pytest.ini
lists/: pytest.ini  tests.py  views.py
lists/migrations/: 0001_initial.py  0002_item_text.py
lists/templates/: home.html
superlists/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_functional.py  test_functional_tests.py
tests/lists/: test_models.py  test_unit_tests.py  test_views.py
